--- a/src/styles/layout/_gallery.scss
+++ b/src/styles/layout/_gallery.scss
@@ -1,17 +1,26 @@
+$gutter-size: 6rem;
+
 .gallery {
-  display: -webkit-box; /* Not needed if autoprefixing */
-  display: -ms-flexbox; /* Not needed if autoprefixing */
   display: flex;
-  margin-left: -3rem; /* gutter size offset */
+  margin-left: -$gutter-size; 
   width: auto;
+
+  .gallery-col {
+    padding-left: $gutter-size; 
+    background-clip: padding-box;
+  
+    a {
+      color: hsl(0, 0, 50%);
+      display: block;
+      font-size: .8275rem;
+      margin-bottom: 3rem;
+      text-decoration: none;
+    
+      &:hover {
+        color: hsl(0, 0, 0%);
+      }
+    }
+  }
 }
-.gallery-col {
-  padding-left: 3rem; /* gutter size */
-  background-clip: padding-box;
-}
+
  
-/* Style your items */
-.gallery-col > a { /* change div to reference your elements you put in <Masonry> */
-  background: grey;
-  margin-bottom: 3rem;
-}
