--- a/src/styles/layout/_lightbox.scss
+++ b/src/styles/layout/_lightbox.scss
@@ -2,6 +2,8 @@
   --lightbox-padding-top: 50px;
   --lightbox-padding-bottom: 100px;
 
+  display: flex;
+  flex-direction: column;
   height: 100vh;
   overflow: hidden;
   position: relative;
@@ -25,12 +27,23 @@
 
 .lightbox-footer {
   align-items: center;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  grid-template-areas: ". title count";
   height: var(--lightbox-padding-bottom);
-  justify-content: center;
+  margin-top: auto;
 
   p {
     margin: 0;
+
+    &:nth-of-type(1) {
+      grid-area: title;
+    }
+
+    &:nth-of-type(2) {
+      justify-self: flex-end;
+      grid-area: count;
+    }
   }
 }
 
@@ -47,6 +60,9 @@
   z-index: 2;
 
   > button {
+    background-color: none;
+    border: none;
+    cursor: pointer;
     font-size: 2rem;
     pointer-events: auto;
   }
