--- a/src/styles/layout/_lightbox.scss
+++ b/src/styles/layout/_lightbox.scss
@@ -10,7 +10,16 @@
 }
 
 .lightbox-header {
+  align-items: center;
+  display: flex;
   height: var(--lightbox-padding-top);
+  justify-content: flex-end;
+
+  a {
+    color: black;
+    font-size: 2rem;
+    text-decoration: none;
+  }
 }
 
 .lightbox-image {
