--- a/src/styles/layout/_nav.scss
+++ b/src/styles/layout/_nav.scss
@@ -3,13 +3,24 @@
 }
 
 nav {
+  ul {
+    display: flex;
+    margin: 0;
+    padding: 0;
+  }
+
+  li {
+    display: flex;
+  }
+
   a {
     color: var(--nav-link-color);
+    font-size: 1rem;
     line-height: 1;
-    padding: .25rem;
+    padding: 0.25rem;
     text-decoration: none;
     text-transform: capitalize;
-    transition: color .125s;
+    transition: color 0.125s;
     position: relative;
 
     &:hover {
@@ -17,36 +28,21 @@ nav {
     }
 
     &.active {
-      @include font-bold;
+      // @include font-bold;
+      border-bottom: 2px solid;
 
-      &:before {
-        background-color: currentColor;
-        border-radius: .25rem;
-        bottom: 0;
-        content: '';
-        height: .25rem;
-        left: -.5rem;
-        margin: auto 0;
-        position: absolute;
-        top: 0;
-        width: .25rem;
-      }
+      // &:before {
+      //   background-color: currentColor;
+      //   border-radius: 0.25rem;
+      //   bottom: 0;
+      //   content: "";
+      //   height: 0.25rem;
+      //   left: -0.5rem;
+      //   margin: auto 0;
+      //   position: absolute;
+      //   top: 0;
+      //   width: 0.25rem;
+      // }
     }
-
-  }
-
-  > a {
-    display: block;
-    margin-bottom: 1rem;
-    text-transform: uppercase;
-  }
-
-  ul {
-    margin: 0;
-    padding: 0;
-  }
-
-  li {
-    display: flex;
   }
 }
