--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,15 +1,15 @@
 @charset 'utf-8';
 
-@import 'abstracts/functions';
-@import 'abstracts/variables';
-@import 'abstracts/mixins';
+@import "abstracts/functions";
+@import "abstracts/variables";
+@import "abstracts/mixins";
 
-@import 'base/reset';
-@import 'base/typography';
+@import "base/reset";
+@import "base/typography";
 
-@import 'layout/layout';
-@import 'layout/gallery';
-@import 'layout/header';
-@import 'layout/nav';
-@import 'layout/lightbox';
-
+@import "layout/layout";
+@import "layout/gallery";
+@import "layout/header";
+@import "layout/nav";
+@import "layout/lightbox";
+@import "layout/hero";
