--- a/src/styles/layout/_nav.scss
+++ b/src/styles/layout/_nav.scss
@@ -1,8 +1,13 @@
 :root {
-  --nav-link-color: hsl(154, 23%, 34%);
+  --nav-link-color: hsl(0, 0%, 60%);
+  --nav-link-color-active: hsl(164, 19%, 39%);
+  --nav-link-padding-x: 0.5rem;
+  --nav-link-padding-y: 1rem;
 }
 
 nav {
+  display: flex;
+
   ul {
     display: flex;
     margin: 0;
@@ -15,34 +20,36 @@ nav {
 
   a {
     color: var(--nav-link-color);
-    font-size: 1rem;
+    font-size: 0.875rem;
+    letter-spacing: var(--letter-spacing);
     line-height: 1;
-    padding: 0.25rem;
+    padding: var(--nav-link-padding-y) var(--nav-link-padding-x);
     text-decoration: none;
-    text-transform: capitalize;
+    text-transform: uppercase;
     transition: color 0.125s;
     position: relative;
 
     &:hover {
-      // color: hsl(154, 23%, 50%);
+      color: var(--nav-link-color-active);
+    }
+
+    &:after {
+      background-color: var(--nav-link-color-active);
+      bottom: 0;
+      content: "";
+      height: 2px;
+      left: 0;
+      opacity: 0;
+      position: absolute;
+      right: 0;
     }
 
     &.active {
-      // @include font-bold;
-      border-bottom: 2px solid;
+      color: var(--nav-link-color-active);
 
-      // &:before {
-      //   background-color: currentColor;
-      //   border-radius: 0.25rem;
-      //   bottom: 0;
-      //   content: "";
-      //   height: 0.25rem;
-      //   left: -0.5rem;
-      //   margin: auto 0;
-      //   position: absolute;
-      //   top: 0;
-      //   width: 0.25rem;
-      // }
+      &:after {
+        opacity: 1;
+      }
     }
   }
 }
