--- a/src/styles/page/_base.scss
+++ b/src/styles/page/_base.scss
@@ -14,7 +14,7 @@ body {
     height: 100vh;
     left: 0;
     pointer-events: none;
-    position: sticky;
+    position: fixed;
     right: 0;
     top: 0;
     z-index: 1000;
@@ -22,8 +22,8 @@ body {
 }
 
 section:not(.hero) {
-  margin: 0 auto;
-  max-width: var(--max-page-width);
+  // margin: 0 auto;
+  // max-width: var(--max-page-width);
 }
 
 main {
