add Dato CMS, minor CSS tweaks

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,6 +11,7 @@
 
 @import "layout/layout";
 @import "layout/gallery";
+@import "layout/footer";
 @import "layout/header";
 @import "layout/nav";
 @import "layout/lightbox";
