--- a/src/styles/layout/_hero.scss
+++ b/src/styles/layout/_hero.scss
@@ -1,9 +1,23 @@
 .hero {
   max-height: 100vh;
+  overflow: hidden;
   position: relative;
+
+  &:after {
+    background-color: hsl(0, 0%, 0%);
+    bottom: 0;
+    content: "";
+    left: 0;
+    opacity: calc(var(--scroll-y) * 0.001);
+    pointer-events: none;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
 
   .image {
     position: relative;
+    transform: translate3d(0, calc(var(--scroll-y) * 0.25px), 0);
 
     &:after {
       background-image: linear-gradient(
@@ -42,19 +56,19 @@
 
     > * {
       color: hsl(72, 10%, 90%);
-      @include font-bold;
+      // @include font-bold;
       letter-spacing: -0.0225em;
       line-height: 1.2;
       margin: 0;
       // text-shadow: 0 0 10px hsla(0, 0, 0, 0.2);
     }
 
-    h1 {
-      font-size: 7rem;
-    }
+    // h1 {
+    //   font-size: 7rem;
+    // }
 
-    h3 {
-      font-size: 4rem;
-    }
+    // h3 {
+    //   font-size: 4rem;
+    // }
   }
 }
