--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -23,5 +23,6 @@ $base-font-size: 21;
   --ratio: 1.414;
   --max-page-width: 1270px;
   --body-bg-colour: hsl(0, 0, 0);
-  --letter-spacing: 0.05em;
+  --letter-spacing: 0.0333em;
+  --brand-color: hsl(215, 38%, 47%);
 }
