--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -4,25 +4,34 @@
 }
 
 header {
-  position: sticky;
-  top: 0;
-  z-index: 10;
-  left: 0;
-  right: 0;
-}
-
-header {
-  background: hsl(0, 0, 0%);
+  // background: hsl(0, 0%, 100%);
   display: flex;
   justify-content: space-between;
   padding: var(--box-width) calc(var(--box-width) + 1rem) 0;
+  transition: transform 0.25s ease;
+  z-index: 10;
 
   .brand {
-    color: var(--nav-link-color);
+    color: var(--brand-color);
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: var(--letter-spacing);
     line-height: 1;
     padding: var(--nav-link-padding-y) var(--nav-link-padding-x);
+  }
+}
+
+.headroom-wrapper {
+  left: 0;
+  right: 0;
+  position: fixed;
+  z-index: 10;
+}
+
+.headroom {
+  z-index: 10 !important;
+
+  &--pinned {
+    background-color: white;
   }
 }
