--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -25,4 +25,6 @@ $base-font-size: 21;
   --body-bg-colour: hsl(0, 0, 0);
   --letter-spacing: 0.0333em;
   --brand-color: hsl(215, 38%, 47%);
+  --hero-height: 100vh;
+  --page-padding-x: 3rem;
 }
