--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -1,5 +1,34 @@
-footer {
-  background-color: hsl(60, 12%, 87%);
-  color: hsl(0, 0%, 50%);
-  padding: 1rem calc(var(--box-width) + 1rem);
+.rb-footer {
+  display: flex;
+  margin-top: auto;
+  padding: 1rem;
+
+  a {
+    border-color: transparent;
+    border-style: solid;
+    border-width: 0 0 1px 0;
+    color: black;
+    display: flex;
+    line-height: 1;
+    margin-left: auto;
+    padding-bottom: 2px;
+    text-decoration: none;
+
+    &:hover {
+      border-color: black;
+    }
+  }
+
+  span {
+    display: block;
+    margin-left: 8px;
+    position: relative;
+    top: 2px;
+    width: 18px;
+
+    svg {
+      display: block;
+      width: 100%;
+    }
+  }
 }
