--- a/src/styles/layout/_nav.scss
+++ b/src/styles/layout/_nav.scss
@@ -1,55 +1,50 @@
-:root {
-  --nav-link-color: hsl(0, 0%, 50%);
-  --nav-link-color-active: hsl(0, 0%, 10%);
-  --nav-link-padding-x: 0.75rem;
-  --nav-link-padding-y: 1rem;
-}
-
 nav {
+  bottom: 0;
   display: flex;
+  flex-direction: column;
+  left: 0;
+  padding: 2.75rem 1rem 1rem;
+  position: fixed;
+  top: 0;
+  z-index: 1000;
 
   ul {
     display: flex;
+    flex-direction: column;
     margin: 0;
     padding: 0;
   }
 
   li {
     display: flex;
+
+    a {
+      color: black;
+      // letter-spacing: var(--letter-spacing);
+      line-height: 1;
+      padding: 0.25rem 0;
+      text-decoration: none;
+      // text-transform: uppercase;
+
+      &.active {
+        color: hsl(0, 0%, 50%);
+      }
+    }
   }
 
-  a {
-    // @include font-bold;
-    color: var(--nav-link-color);
-    font-size: 1rem;
-    letter-spacing: var(--letter-spacing);
-    line-height: 1;
-    padding: var(--nav-link-padding-y) var(--nav-link-padding-x);
-    text-decoration: none;
-    text-transform: uppercase;
-    transition: color 0.125s;
-    position: relative;
+  footer {
+    margin-top: auto;
 
-    &:hover {
-      color: var(--nav-link-color-active);
+    p {
+      margin: 0;
     }
 
-    &:after {
-      background-color: var(--nav-link-color-active);
-      bottom: 0;
-      // content: "";
-      height: 4px;
-      left: 0;
-      opacity: 0;
-      position: absolute;
-      right: 0;
-    }
+    a {
+      color: black;
+      text-decoration: none;
 
-    &.active {
-      color: var(--nav-link-color-active);
-
-      &:after {
-        opacity: 1;
+      &:hover {
+        text-decoration: underline;
       }
     }
   }
