--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -1,11 +1,22 @@
 * {
   box-sizing: border-box;
 
-  &:before, &:after {
+  &:before,
+  &:after {
     box-sizing: inherit;
   }
 }
 
 body {
   margin: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+figure {
+  margin: 0;
+  padding: 0;
 }
