--- a/src/styles/components/filters.scss
+++ b/src/styles/components/filters.scss
@@ -7,7 +7,7 @@
     li {
       display: flex;
 
-      &.selected {
+      &.active {
         color: hsl(0, 0, 50%);
       }
     }
@@ -21,6 +21,10 @@
       font-size: 0.875rem;
       padding: 0.25rem 0.5rem;
       text-transform: capitalize;
+
+      &:focus {
+        outline: none;
+      }
 
       &:hover {
         // text-decoration: underline;
