Update home page

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -25,6 +25,9 @@ $base-font-size: 21;
   --body-bg-colour: hsl(0, 0, 0);
   --letter-spacing: 0.0333em;
   --brand-color: hsl(215, 38%, 47%);
-  --hero-height: 100vh;
+  --hero-height: calc(100vh - 6rem);
   --page-padding-x: 3rem;
+  --transition-speed: 0.25s;
+  --transition-timing-function: ease;
+  --scroll-y: 0;
 }
