--- a/src/styles/layout/_home-cards.scss
+++ b/src/styles/layout/_home-cards.scss
@@ -4,15 +4,22 @@
   margin: 0 auto;
   max-width: 800px;
   padding-top: 6rem;
+
+  h1 {
+    line-height: 1;
+    margin-top: 0;
+  }
 }
 
 .card {
-  display: flex;
+  display: block;
   height: 400px;
   margin: 0 0 4rem;
 
   figure {
+    height: 100%;
     margin: 0;
+    overflow: hidden;
     position: relative;
     width: 100%;
 
@@ -30,12 +37,19 @@
       top: 0;
       z-index: 1;
     }
+
+    &:hover {
+      img {
+        transform: scale(1.05);
+      }
+    }
   }
 
   img {
     display: block;
     height: 100%;
     object-fit: cover;
+    transition: transform calc(var(--transition-speed) * 8) var(--transition-timing-function);
     width: 100%;
   }
 
