--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,10 +1,8 @@
 .rb-header {
   display: flex;
-  padding: 3rem 1rem 1rem;
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
+  top: 3rem;
+  right: 1rem;
   z-index: 1000;
 
   > a {
