Update project page

--- a/src/styles/layout/_hero.scss
+++ b/src/styles/layout/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
   height: var(--hero-height);
-  margin-right: calc(var(--page-padding-x) * -1);
+  margin-right: -2rem;
   overflow: hidden;
   position: relative;
 
