--- a/src/styles/components/_gallery.scss
+++ b/src/styles/components/_gallery.scss
@@ -109,6 +109,10 @@ $gutter-size: 3rem;
     display: flex;
   }
 
+  > div {
+    margin-bottom: 1rem;
+  }
+
   h3 {
     margin-bottom: 0;
   }
@@ -119,6 +123,7 @@ $gutter-size: 3rem;
 
     a {
       height: 150px;
+      padding: 0.25em 0;
       width: auto;
 
       + a {
@@ -134,10 +139,7 @@ $gutter-size: 3rem;
   }
 
   a {
-    @include font("m");
-
     color: hsl(0, 0, 10%);
-    padding: 0.25em 0;
     text-decoration: none;
     transition: color var(--transition-speed) var(--transition-timing-function);
 
