--- a/src/styles/layout/_hero.scss
+++ b/src/styles/layout/_hero.scss
@@ -1,8 +1,11 @@
 .hero {
   height: var(--hero-height);
-  margin-right: -2rem;
   overflow: hidden;
   position: relative;
+
+  @include respond-to("desktop") {
+    margin-right: -2rem;
+  }
 
   .image {
     height: inherit;
