--- a/src/styles/layout/_nav.scss
+++ b/src/styles/layout/_nav.scss
@@ -1,12 +1,31 @@
 nav {
-  bottom: 0;
+  background: var(--body-background-colour);
   display: flex;
-  flex-direction: column;
+  height: calc(100vh - var(--header-height));
   left: 0;
+  opacity: 0;
   padding: 2.75rem 1rem 1rem;
-  position: fixed;
-  top: 0;
-  z-index: 1000;
+  pointer-events: none;
+  position: absolute;
+  right: 0;
+  top: 100%;
+  z-index: 2;
+
+  &.open {
+    opacity: 1;
+    pointer-events: auto;
+  }
+
+  @include respond-to("desktop") {
+    bottom: 0;
+    flex-direction: column;
+    left: 0;
+    opacity: 1;
+    pointer-events: auto;
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+  }
 
   ul {
     display: flex;
@@ -17,6 +36,14 @@ nav {
 
   li {
     display: flex;
+
+    &:first-of-type {
+      display: none;
+
+      @include respond-to("desktop") {
+        display: flex;
+      }
+    }
 
     a {
       color: black;
@@ -33,6 +60,12 @@ nav {
   }
 
   footer {
+    display: none;
+
+    @include respond-to("desktop") {
+      display: block;
+    }
+
     margin-top: auto;
 
     p {
