--- a/src/styles/components/_gallery.scss
+++ b/src/styles/components/_gallery.scss
@@ -1,3 +1,4 @@
+$gutter-size-sm: 2rem;
 $gutter-size: 3rem;
 
 .gallery-wrapper {
@@ -6,53 +7,85 @@ $gutter-size: 3rem;
 }
 
 .gallery {
+  padding: 1rem;
+  position: relative;
+
   header {
     align-items: center;
+    background-color: var(--body-background-colour);
     display: flex;
-    justify-content: space-between;
-  }
+    position: sticky;
+    top: 0;
+    z-index: 1;
 
-  .gallery-filters {
-    display: flex;
-    margin: 1rem 0;
-
-    li {
-      display: flex;
-
-      + li {
-        margin-left: 0.5rem;
-      }
+    @include respond-to("desktop") {
+      justify-content: space-between;
     }
   }
+}
 
-  .gallery-layout-options {
+.gallery-filters {
+  display: flex;
+  flex: 1;
+  margin: 1rem 0;
+
+  li {
     display: flex;
+    flex: 1;
 
-    button + button {
+    + li {
       margin-left: 0.5rem;
     }
+
+    button {
+      flex: 1;
+    }
+  }
+}
+
+.gallery-layout-options {
+  display: none;
+
+  @include respond-to("desktop") {
+    display: flex;
+  }
+
+  button + button {
+    margin-left: 0.5rem;
   }
 }
 
 .gallery-grid {
   display: none;
-  margin-left: -$gutter-size;
+  margin-left: -$gutter-size-sm;
   width: auto;
+
+  @include respond-to("desktop") {
+    margin-left: -$gutter-size;
+  }
 
   &.active {
     display: flex;
   }
 
   .gallery-grid-col {
-    padding-left: $gutter-size;
+    padding-left: $gutter-size-sm;
     background-clip: padding-box;
+
+    @include respond-to("desktop") {
+      padding-left: $gutter-size;
+    }
   }
 
   a {
     display: block;
-    margin-bottom: $gutter-size;
+    margin-bottom: $gutter-size-sm;
     position: relative;
     text-decoration: none;
+
+    @include respond-to("desktop") {
+      margin-bottom: $gutter-size;
+    }
 
     &:after {
       background-color: hsla(0, 0%, 100%, 0.2);
@@ -63,19 +96,22 @@ $gutter-size: 3rem;
       position: absolute;
       right: 0;
       top: 0;
-      transition: opacity var(--transition-speed) var(--transition-timing-function);
+      transition: opacity var(--transition-speed)
+        var(--transition-timing-function);
     }
 
-    &:hover {
-      &:after {
-        opacity: 1;
-      }
+    @include respond-to("desktop") {
+      &:hover {
+        &:after {
+          opacity: 1;
+        }
 
-      figcaption {
-        border-bottom: 2px solid;
-        // opacity: 1;
-        // transform: translate3d(0, 0, 0);
-        // transition: opacity var(--transition-speed) var(--transition-timing-function), transform var(--transition-speed) var(--transition-timing-function);
+        figcaption {
+          border-bottom: 2px solid;
+          // opacity: 1;
+          // transform: translate3d(0, 0, 0);
+          // transition: opacity var(--transition-speed) var(--transition-timing-function), transform var(--transition-speed) var(--transition-timing-function);
+        }
       }
     }
 
@@ -92,6 +128,7 @@ $gutter-size: 3rem;
         // opacity: 0;
         // transform: translate3d(0, -50%, 0);
         display: inline-block;
+        line-height: 1.2;
         transition: border-color var(--transition-speed);
         // transition: opacity var(--transition-speed) var(--transition-timing-function), transform 0s var(--transition-timing-function) var(--transition-speed);
 
@@ -127,7 +164,7 @@ $gutter-size: 3rem;
       width: auto;
 
       + a {
-        margin-left: .25rem;
+        margin-left: 0.25rem;
       }
 
       img {
