--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,15 +1,28 @@
 .rb-header {
-  display: flex;
-  position: fixed;
-  top: 3rem;
-  right: 1rem;
-  z-index: 1000;
+  --header-height: 25px; // override with js
 
-  > a {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  z-index: 3;
+
+  @include respond-to("desktop") {
+    position: fixed;
+    right: 1rem;
+    top: 3rem;
+    z-index: 1000;
+  }
+
+  > a,
+  > button {
     color: black;
     letter-spacing: var(--letter-spacing);
-    margin-left: auto;
     text-decoration: none;
     text-transform: uppercase;
+  }
+
+  > button {
+    background: none;
+    border: none;
   }
 }
