--- a/src/styles/layout/_home-cards.scss
+++ b/src/styles/layout/_home-cards.scss
@@ -1,9 +1,12 @@
 .cards {
-  columns: 2;
-  column-gap: 6rem;
   margin: 0 auto;
   max-width: 800px;
   padding-top: 6rem;
+
+  @include respond-to("desktop") {
+    columns: 2;
+    column-gap: 6rem;
+  }
 
   h1 {
     line-height: 1;
@@ -49,7 +52,8 @@
     display: block;
     height: 100%;
     object-fit: cover;
-    transition: transform calc(var(--transition-speed) * 8) var(--transition-timing-function);
+    transition: transform calc(var(--transition-speed) * 8)
+      var(--transition-timing-function);
     width: 100%;
   }
 
