--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -3,10 +3,12 @@
 
   display: flex;
   justify-content: space-between;
+  padding: 0.5rem 1rem;
   position: relative;
   z-index: 3;
 
   @include respond-to("desktop") {
+    padding: 0;
     position: fixed;
     right: 1rem;
     top: 3rem;
