--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -20,3 +20,19 @@ figure {
   margin: 0;
   padding: 0;
 }
+
+button {
+  display: inline-block;
+  border: none;
+  padding: 0;
+  margin: 0;
+  background-color: transparent;
+  font: inherit;
+  cursor: pointer;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+
+  &:focus {
+    outline: none; // TODO add focus styles
+  }
+}
