--- a/src/styles/elements/_button.scss
+++ b/src/styles/elements/_button.scss
@@ -1,30 +1,22 @@
 button {
   --button-transition-time: 0.15s;
 
-  background-color: hsl(0, 0, 100%);
-  color: inherit;
-  cursor: pointer;
-  border: 1px solid hsl(0, 0, 80%);
-  border-radius: 0.25em;
-  font: inherit;
-  font-size: 0.75rem;
-  line-height: 1;
-  padding: 0.25rem 0.5rem;
-  text-transform: capitalize;
-  transition: border var(--transition-speed) var(--transition-timing-function);
-
-  &:focus {
-    outline: none;
-  }
+  // background-color: hsl(0, 0, 100%);
+  // border: 1px solid hsl(0, 0, 80%);
+  // border-radius: 0.25em;
+  // font-size: 0.75rem;
+  // padding: 0.25rem 0.5rem;
+  // text-transform: capitalize;
+  // transition: border var(--transition-speed) var(--transition-timing-function);
 
   &:hover {
-    border-color: hsl(0, 0, 0%);
+    // border-color: hsl(0, 0, 0%);
   }
 
   &.active,
   .active & {
-    background-color: hsl(0, 0, 0%);
-    border-color: hsl(0, 0, 0%);
-    color: hsl(0, 0, 100%);
+    // background-color: hsl(0, 0, 0%);
+    // border-color: hsl(0, 0, 0%);
+    // color: hsl(0, 0, 100%);
   }
 }
