--- a/src/styles/layout/_nav.scss
+++ b/src/styles/layout/_nav.scss
@@ -1,10 +1,11 @@
 nav {
   background: var(--body-background-colour);
   display: flex;
+  flex-direction: column;
   height: calc(100vh - var(--header-height));
   left: 0;
   opacity: 0;
-  padding: 2.75rem 1rem 1rem;
+  padding: 2.75rem var(--page-padding-x-mobile) 1rem;
   pointer-events: none;
   position: absolute;
   right: 0;
@@ -30,12 +31,15 @@ nav {
   ul {
     display: flex;
     flex-direction: column;
+    flex: 1;
     margin: 0;
     padding: 0;
   }
 
   li {
+    border-bottom: 1px solid hsla(0, 0, 0, .25);
     display: flex;
+    font-size: 2.5rem;
 
     &:first-of-type {
       display: none;
@@ -49,18 +53,18 @@ nav {
       color: black;
       // letter-spacing: var(--letter-spacing);
       line-height: 1;
-      padding: 0.25rem 0;
+      padding: 0.5em 0;
       text-decoration: none;
       // text-transform: uppercase;
 
       &.active {
-        color: hsl(0, 0%, 50%);
+        // color: hsl(0, 0%, 50%);
       }
     }
   }
 
   footer {
-    display: none;
+    // display: none;
 
     @include respond-to("desktop") {
       display: block;
@@ -80,5 +84,14 @@ nav {
         text-decoration: underline;
       }
     }
+  }
+}
+
+body.mobile-menu-open {
+  overflow: hidden;
+
+  .rb-header, .rb-nav {
+    background-color: var(--mobile-menu-bg-color);
+    transition: background-color var(--transition-speed) var(--transition-timing-function);
   }
 }
