--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,9 +16,9 @@
 @import "layout/nav";
 @import "layout/lightbox";
 @import "layout/hero";
-@import "layout/home-cards";
 
 @import "components/gallery";
+@import "components/card";
 
 @import "elements/button";
 
