--- a/src/styles/components/_gallery.scss
+++ b/src/styles/components/_gallery.scss
@@ -28,6 +28,7 @@ $gutter-size: 3rem;
   display: flex;
   flex: 1;
   margin: 1rem 0;
+  overflow: scroll;
 
   li {
     display: flex;
@@ -38,7 +39,11 @@ $gutter-size: 3rem;
     }
 
     button {
+      background-color: hsla(0, 0, 0%, 0.1);
       flex: 1;
+      font-size: $font-size-s2;
+      padding: 0.25em 0.75em;
+      text-transform: uppercase;
     }
   }
 }
@@ -77,7 +82,7 @@ $gutter-size: 3rem;
     }
   }
 
-  a {
+  .card {
     display: block;
     margin-bottom: $gutter-size-sm;
     position: relative;
@@ -117,19 +122,20 @@ $gutter-size: 3rem;
 
     figure {
       img {
-        display: inline-block;
-        height: auto;
-        width: 100%;
+        // display: inline-block;
+        // height: auto;
+        // width: 100%;
       }
 
       figcaption {
-        border-bottom: 2px solid transparent;
-        color: hsl(0, 0, 20%);
+        font-size: $font-size-1;
+        // border-bottom: 2px solid transparent;
+        // color: hsl(0, 0, 20%);
         // opacity: 0;
         // transform: translate3d(0, -50%, 0);
-        display: inline-block;
-        line-height: 1.2;
-        transition: border-color var(--transition-speed);
+        // display: inline-block;
+        // line-height: 1.2;
+        // transition: border-color var(--transition-speed);s
         // transition: opacity var(--transition-speed) var(--transition-timing-function), transform 0s var(--transition-timing-function) var(--transition-speed);
 
         // will-change: transform;
