--- a/src/styles/layout/_hero.scss
+++ b/src/styles/layout/_hero.scss
@@ -42,7 +42,7 @@
     flex-direction: column;
     font-size: 1.25rem;
     justify-content: center;
-    padding: 0 var(--page-padding-x-mobile) 3rem;
+    padding: 0 $page-padding-x-mobile 3rem;
     position: absolute;
     width: 100%;
 
