--- a/src/styles/layout/_nav.scss
+++ b/src/styles/layout/_nav.scss
@@ -5,7 +5,7 @@ nav {
   height: calc(100vh - var(--header-height));
   left: 0;
   opacity: 0;
-  padding: 2.75rem var(--page-padding-x-mobile) 1rem;
+  padding: 2.75rem $page-padding-x-mobile 1rem;
   pointer-events: none;
   position: absolute;
   right: 0;
