--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,6 +8,7 @@
 @import "base/typography";
 
 @import "page/base";
+@import "page/category";
 @import "page/project";
 
 @import "layout/layout";
@@ -19,6 +20,7 @@
 
 @import "components/gallery";
 @import "components/card";
+@import "components/hamburger";
 
 @import "elements/button";
 
