--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -1,5 +1,5 @@
 .rb-footer {
-  padding: $page-padding-x-mobile;
+  padding: 6rem $page-padding-x-mobile $page-padding-x-mobile;
   position: relative;
 
   p {
