--- a/src/styles/page/_project.scss
+++ b/src/styles/page/_project.scss
@@ -1,13 +1,13 @@
-.is-fullscreen {
-  --translate-x: 0;
-  --translate-y: 0;
+// .is-fullscreen {
+//   --translate-x: 0;
+//   --translate-y: 0;
 
-  img {
-    transform: translate3d(var(--translate-x), var(--translate-y), 0);
-    will-change: transform;
-    z-index: 200;
-  }
-}
+//   img {
+//     transform: translate3d(var(--translate-x), var(--translate-y), 0);
+//     will-change: transform;
+//     z-index: 200;
+//   }
+// }
 
 main.project {
   align-items: baseline;
@@ -32,8 +32,8 @@ main.project {
   }
 
   figure {
-    height: 100vh;
-    padding: 3rem 0;
+    // height: 100vh;
+    margin: 0 0 1rem;
     position: relative;
 
     img {
@@ -42,7 +42,9 @@ main.project {
       object-fit: contain;
       transition: transform var(--transition-speed)
         var(--transition-timing-function);
+      
       width: 100%;
+      will-change: transform
     }
   }
 }
